objects/TimeSheetEntry.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account lookup</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Time Sheet Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Work_Order__r.Street + &quot;, &quot; + Work_Order__r.City + &quot;, &quot; + Work_Order__r.State + &quot;, &quot; +  Work_Order__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interrupted_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the time sheet entry that this time sheet entry interrupted. Used to resume a previous entry.</description>
        <label>Interrupted Entry</label>
        <referenceTo>TimeSheetEntry</referenceTo>
        <relationshipLabel>Time Sheet Entries (Interrupted Entry)</relationshipLabel>
        <relationshipName>InterruptedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overlapping_Entry_Warning__c</fullName>
        <formula>IF (  ISBLANK( Overlapping_Time_Sheet_Entry__c  ),  IMAGE( &quot;/resource/Greenlight&quot;, &quot;Greenlight&quot;, 15, 15 ), IMAGE( &quot;/resource/Redlight&quot;, &quot;Redlight&quot;, 15, 15 ) )</formula>
        <label>Overlapping Entry Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overlapping_Time_Sheet_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Overlapping Time Sheet Entry</label>
        <referenceTo>TimeSheetEntry</referenceTo>
        <relationshipLabel>Overlapping Time Sheet Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResourceId__c</fullName>
        <formula>TimeSheet.ServiceResourceId</formula>
        <label>ResourceId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Appointment</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>Time Sheet Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Franchise</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Order Lookup</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Time Sheet Entries</relationshipLabel>
        <relationshipName>Time_Sheet_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Lockdown_at_Midnight</fullName>
        <active>false</active>
        <description>You can not edit a time sheet entry after midnight</description>
        <errorConditionFormula>AND(
DATEVALUE( CreatedDate ) != TODAY(),
 TimeSheet.ServiceResource.Name ==  $User.Full_Name__c 
)</errorConditionFormula>
        <errorMessage>You can not edit a time sheet entry after midnight</errorMessage>
    </validationRules>
</CustomObject>